<resources>
    <string name="app_name">Roger</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="team_score">0</string>
    <string name="plus_six_runs">+6 Runs</string>
    <string name="plus_four_runs">+4 Runs</string>
    <string name="plus_one_run">+1 Run</string>
    <string name="plus_one_wicket">+1 Out</string>
    <string name="reset">Reset</string>
    <string name="team_wicket">0</string>
    <string name="scorekeeper">Scorekeeper</string>
    <string name="question_1">1. Select the opening that does not belong?</string>
    <string name="question_2">2. Select the Caro-Kann defence?</string>
    <string name="question_3">3. Select all variations of the Sicilian defence.</string>
    <string name="question_4">4. Name this opening?</string>
    <string name="question_5">5. Select the Reti opening?</string>
    <string name="question_6">6. Name this opening?</string>
    <string name="question_7">7. Name this opening:</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="ops_hrs">Mo - Fr ; 9 AM - 7 PM</string>
    <string name="visit_us">Visit Us</string>
    <string name="about_us">About Us</string>
    <string name="address">19 Hekla Rd,Valhalla,Centurion</string>
    <string name="aboutdc_image_view">aboutdc</string>
    <string name="dontcook_image_view">dontcook</string>
    <string name="quality_meals">Freshly prepared and delivered to you daily.</string>
    <string name="details_activity">Details</string>
    <string name="sight_one_name">Cape Peninsula</string>
    <string name="sight_one_details">The tip of Africa</string>
    <string name="sight_one_description">The mother city is home to various tourist attractions and
        South Africa\'s most popular holiday destination.
        Table Mountain, Lion\'s Head, and Cape Point offers hiking, paragliding, cable cart rides, and spectacular
        views over the city.
        It\'s sandy beaches attracts many a kite surfer, to enjoy the fresh air whilst floating across
        the long stretch of white sand dunes. </string>
    <string name="sight_one_location">Cape Town, Western Cape</string>
    <string name="sight_two_name">Durban Golden Mile</string>
    <string name="sight_two_details">Warm beaches</string>
    <string name="sight_two_description">The Zulu kingdom have the warmest beaches in SA. It also
        have the world\'s only stadium swing, and is home to the greater range of the Drakensberg.
        Durban also offers the best waves for surfers. It also have the best snorkeling spots.
        If you feel adventurous you can cage dive with the sharks.</string>
    <string name="sight_two_location">Durban, Kwazulu-Natal</string>
    <string name="sight_three_name">Drakensberg</string>
    <string name="sight_three_details">Africa\'s longest mountain range.</string>
    <string name="sight_three_description">This mountain range stretches through the majority of
        South Africa. It is covered in snow during winter and stands tall over the escarpment.</string>
    <string name="sight_three_location">Kwazulu-Natal</string>
    <string name="sight_four_name">Blyde River Canyon</string>
    <string name="sight_four_details">The worlds biggest canyons.</string>
    <string name="sight_four_description">The Blyde River Canyon is the world\'s largest canyon,
        only to The Grand Canyon in USA and Fish River Canyon in Namibia.
        Blyde River Canyon is part of the Panorama route, which include attractions such as God\'s Window,
        Potholes, and Sabie Falls, as well as the Mpumalanga highlands.</string>
    <string name="sight_four_location">Limpopo, 8001</string>
    <string name="accommodation_one_name">Waterfront</string>
    <string name="accommodation_one_details">The heart of Cape Town</string>
    <string name="accommodation_one_description">Stay near all attractions, and visit any of the
        food outlets, bars, or the entertainment arena. Start every day with a boat trip around Africa\'s oldest harbour still in operation.</string>
    <string name="accommodation_one_location">19 Dock Rd, Cape Town, 8001</string>
    <string name="accommodation_two_name">One and Only</string>
    <string name="accommodation_two_details">Enjoy a variety of entertainment</string>
    <string name="accommodation_two_description">The 123 hectares area has been developed for mixed-use, with both residential and commercial real estate, and attracts more than 23 million visitors a year</string>
    <string name="accommodation_two_location">19 Dock Rd, Cape Town, 8001</string>
    <string name="accommodation_three_name">12 Apostles</string>
    <string name="accommodation_three_details">Pet Friendly</string>
    <string name="accommodation_three_description">Spoil yourself, your family and your pet to a relaxing
    stay in Chapmain\'s Peak.</string>
    <string name="accommodation_three_location">Cape Town, Western Cape</string>
    <string name="accommodation_four_name">Stellenbosch</string>
    <string name="accommodation_four_details">Enjoy a friendly stay.</string>
    <string name="accommodation_four_description">Take a break from the city live and enjoy the ocean.
    The friendly locals will make yu feel at home.</string>
    <string name="accommodation_four_location">Stellenbosch, Western Cape, South Africa</string>
    <string name="food_one_name">Biltong</string>
    <string name="food_one_details">Meaty treats</string>
    <string name="food_one_description">Tasting biltong and droewors is a must when visiting South Africa.
    It\'s air dried meat and wors (sausage) respectively. Every maker uses his/her own recipe, but
    the results are often similar.
    Nowadays you get different flavours, yet the meat of choice remains the same.</string>
    <string name="food_one_location">19 Dock Rd, Cape Town, 8001</string>
    <string name="food_two_name">Bokkoms</string>
    <string name="food_two_details">Fishy treats</string>
    <string name="food_two_description">The West Coast and Cape Town provide dried fish to snack on
        anywhere. The taste is not for everyone thou.</string>
    <string name="food_two_location">Western Cape</string>
    <string name="food_three_name">Braai</string>
    <string name="food_three_details">SA braai masters</string>
    <string name="food_three_description">Similar to the American BBQ.
        The preferred method is to braai on a wood fire, or charcoal.
        Gas braai being the least preferred, due to its lack of taste and setting a mood.
        We braai meat, wors (sausage) veggies, as separate entities or a combo we call "potjiekos".</string>
    <string name="food_three_location">Everywhere</string>
    <string name="food_four_name">Koeksisters</string>
    <string name="food_four_details">Tea time</string>
    <string name="food_four_description">This sweet treat may often be too sweet to some, yet irresistible to others.</string>
    <string name="food_four_location">Everywhere</string>
    <string name="event_one_name">Shark Diving</string>
    <string name="event_one_details">Cage diving</string>
    <string name="event_one_description">If you are looking for something more adventurous, take a
        dive with the Great Whites.</string>
    <string name="event_one_location">Coastal</string>
    <string name="event_two_name">Dolphin Watching</string>
    <string name="event_two_details">Watch dolphins or play with penguins</string>
    <string name="event_two_description">From watching dolphins to playing with penguins, the cape
        have everything in store for you.</string>
    <string name="event_two_location">19 Dock Rd, Cape Town, 8001</string>
    <string name="event_three_name">Kite Surfing</string>
    <string name="event_three_details">Flying on the beach</string>
    <string name="event_three_description">The SouthEaster as the wind in Cape Town is known, is
        perfect for kite surfing. For those who surf the waves, we recommend heading down to Durban
        as it have better waves for surfers.</string>
    <string name="event_three_location">Coastal</string>
    <string name="event_four_name">Sky Diving</string>
    <string name="event_four_details">Sky dive or paragliding</string>
    <string name="event_four_description">Take a hike up Lion\'s Head, or a cable cart up Table Mountain,
        or glide off either with a glider.
        Or take a drive to one of the many airstrips that offers sky diving lessons. It\'s great fun.</string>
    <string name="event_four_location">Airstrip</string>
    <string name="more_one_name">Robbin Island</string>
    <string name="more_one_details">Visit this famous island</string>
    <string name="more_one_description">For the history buffs, take a trip to where political
        prisoners of the Apartheid era got locked up.
    Here you will get to experience how prisoners felt being able to see Cape Town yet have no means
    of getting to it.
    You may even visit Madiba\'s cell of 27 years. It is untouched since his release.</string>
    <string name="more_one_location">Cape Town</string>
    <string name="more_two_name">Winelands</string>
    <string name="more_two_details">Wine</string>
    <string name="more_two_description">Cape Town is known for it\'s world class wines and visiting
        one or more of the wineries of the Cape Winelands is a must.
    Due to its popularity it is advised to make a booking before hand to avoid disappointment.
    If you are a collector, make sure to bring your check book as you will surely find the wine worth purchasing.</string>
    <string name="more_two_location">Western Cape</string>
    <string name="more_three_name">Safari</string>
    <string name="more_three_details">Sleep under the stars</string>
    <string name="more_three_description">No trip to SA is completed without a
        wildlife safari in Mpumalanga/limpopo or a visit to the Kalahari.</string>
    <string name="more_three_location">Mpumalanga, Limpopo, Northern Cape</string>
    <string name="more_four_name">Long Street</string>
    <string name="more_four_details">Night Life</string>
    <string name="more_four_description">Long Street comes alive at night, when old and young meet
        to paint the town red.
        If you are not one for the night life, you may enjoy a night out in one of the many restaurants
        any time during the day.
    </string>
    <string name="more_four_location">Long St, Cape Town, 8001</string>
    <string name="image_description">cape_image</string>
    <string name="image_content_description">Screen shot of selected project</string>
    <string name="image_background_description">Background for opaque image</string>
    <string name="card">Card</string>
    <string name="quiz">Quiz</string>
    <string name="guide">Guide</string>
    <string name="activity_nowplaying_title">Now playing</string>
    <string name="tab_playlist">Playlists</string>
    <string name="tab_artist">Artists</string>
    <string name="tab_album">Albums</string>
    <string name="tab_song">Songs</string>
    <string name="song_1">Song 1</string>
    <string name="song_2">Song 2</string>
    <string name="song_3">Song 3</string>
    <string name="song_4">Song 4</string>
    <string name="artist_1">Artist 1</string>
    <string name="artist_2">Artist 2</string>
    <string name="album_1">Album 1</string>
    <string name="album_2">Album 2</string>
    <string name="playlist_1">Playlist 1</string>
    <string name="playlist_2">Playlist 2</string>
    <string name="action_activity_nowplaying">Will use MediaPlayer to play music</string>
    <string name="action_frag_album">Display the list of musicAlbums</string>
    <string name="music">Music</string>
    <string name="news">News</string>
    <string name="news_img_desc">News</string>
    <string name="news_id">News</string>
    <string name="news_desc">News Description</string>
</resources>