<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    android:backgroundTint="#8A4029"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/newsImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/news_img_desc"
            app:srcCompat="@android:mipmap/sym_def_app_icon" />

        <TextView
            android:id="@+id/newsTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/newsDescriptionTextView"
            android:layout_below="@id/newsImageView"
            android:padding="4dp"
            android:text="@string/news_id"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            tools:text="News Title" />

        <TextView
            android:id="@+id/newsDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:maxLines="3"
            android:text="@string/news_desc"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="12sp"
            tools:text="@string/news_desc" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>